fix: top navbar account menu not being hidden on smaller screens

--- a/client/src/components/Navbars/Navbars.css
+++ b/client/src/components/Navbars/Navbars.css
@@ -16,7 +16,7 @@
   }
 
   .account-menu {
-    @apply relative;
+    @apply relative hidden md:block;
 
     &.open {
       button.account-menu-btn {
